# rust-clap-cli-archetype

./: README.md  archetype.lua  archetype.yaml
.github/workflows/: release.yaml
contents/: .gitignore  Cargo.toml  README.md
contents/.cargo/: config.toml
contents/.github/workflows/: ci.yml
contents/src/: lib.rs  main.rs
contents/{{ project_name }}/: .editorconfig  .gitattributes
